# GirafeMLAutumn2024

./: .gitignore  pyproject.toml
homeworks/assignment01_knn/: k_nearest_neighbor.py  knn_assignment_0_01.ipynb
homeworks/assignment02_laplace/: distribution.py  laplace_distribution_assignment_0_02.ipynb
homeworks/assignment03_derivatives/: derivatives.py  derivatives_assignment_03.ipynb
homeworks/assignment04_power_iteration/: power_method.py  power_method_assignment_0_04.ipynb
homeworks/assignment05_bagging_and_oob/: assignment_bagging_and_oob.ipynb  bagging.py
homeworks/lab01_ml_pipeline/: lab01_part1_questions.ipynb  lab01_part2_ml_pipeline.ipynb  lab01_part3_svm_kernels.ipynb
homeworks/lab_02/: lab02_boosting_and_explanation.ipynb
homeworks/lab_03/: hw_language_modeling.ipynb
