[tool.poetry]
name = "bayes-tasks"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ipykernel = "^6.29.5"
numpy = "^2.1.2"
matplotlib = "^3.9.2"
scipy = "^1.14.1"
tqdm = "^4.66.5"
jax = "^0.4.34"
scikit-learn = "^1.5.2"
seaborn = "^0.13.2"
mlxtend = "^0.23.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
ruff = "^0.6.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
