[tool.poetry]
name = "girafe-ml"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = " >=3.10"
ipykernel = "^6.29.5"
matplotlib = "^3.9.2"
scipy = "^1.14.1"
tqdm = "^4.66.5"
scikit-learn = "^1.5.2"
seaborn = "^0.13.2"
lightgbm = "^4.5.0"
llvmlite = "^0.43.0"
jax = "^0.4.35"
optax = "^0.2.4"



[[tool.poetry.source]]
name = "cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "supplemental"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
ruff = "^0.6.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
